xidlc/tests/invalid/http_stream_bidi_typescript.idl
#progma xidlc package xidlc
#progma xidlc version v1.0.0

interface InvalidTypescriptBidiStreamService {
    @bidi-stream
    @get(path = "/chat")
    void chat(
        in string room,
        in string text,
        out string from,
        out string reply
    );
};
